--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       © 2025 Prasivo · Independent Learning Platform
     </div>
   </footer>
-
+<script src="script.js"></script>
 </body>
 </html>
+  
