--- a/notes.html
+++ b/notes.html
@@ -31,11 +31,12 @@
   <h1>Notes</h1>
 
   <ul id="notesList">
-    <li>Respiratory System</li>
-    <li>Cardiovascular System</li>
-    <li>Digestive System</li>
-    <li>Nervous System</li>
-    <li>Pharmacology Basics</li>
+  <li><a href="anatomy.html">Human Anatomy and Physiology</a></li>
+  <li><a href="pharmaceutics.html">Pharmaceutics</a></li>
+  <li><a href="inorganic-chemistry.html">Pharmaceutical Inorganic Chemistry</a></li>
+  <li><a href="pharmaceutical-analysis.html">Pharmaceutical Analysis</a></li>
+  <li><a href="remedial-mathematics.html">Remedial Mathematics</a></li>
+  <li><a href="skill-development.html">Skill Development</a></li>
   </ul>
 </main>
 
