--- a/anatomy.html
+++ b/anatomy.html
@@ -25,10 +25,41 @@
   <h1>Human Anatomy and Physiology</h1>
 
   <p>
-    Content will be added soon.
-    This section is under development.
+    Human Anatomy and Physiology deals with the structural organization
+    of the human body and the functions of its various systems.
+    This subject forms the foundation for understanding health,
+    disease, and pharmaceutical sciences.
+  </p>
+
+  <h3>What You Will Learn</h3>
+  <ul>
+    <li>Basic anatomical terminology</li>
+    <li>Levels of structural organization</li>
+    <li>Cell structure and functions</li>
+    <li>Human tissues and their types</li>
+    <li>Major organ systems of the body</li>
+  </ul>
+
+  <h3>Major Body Systems</h3>
+  <ul>
+    <li>Skeletal System</li>
+    <li>Muscular System</li>
+    <li>Cardiovascular System</li>
+    <li>Respiratory System</li>
+    <li>Digestive System</li>
+    <li>Nervous System</li>
+    <li>Endocrine System</li>
+    <li>Urinary and Reproductive Systems</li>
+  </ul>
+
+  <h3>Importance in Pharmacy</h3>
+  <p>
+    Understanding human anatomy and physiology is essential for
+    comprehending drug actions, disease mechanisms, and therapeutic
+    interventions in pharmaceutical practice.
   </p>
 </main>
+  
 
 <footer>
   © 2025 Prasivo · Independent Learning Platform
