--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
   <main>
     <h1>Learn Smarter with Free Notes and AI Tools</h1>
 
-    <p>
-      Access free notes and use smart AI tools to understand
-      concepts better and faster.
-    </p>
+    <h1 data-key="hero_title">Learn Smarter with Free Notes and AI Tools</h1>
+<p data-key="hero_desc">
+  Access free notes and use smart AI tools to understand concepts better and faster.
+</p>
 
     <p class="founder">
       <strong>Founder & CEO:</strong> Prasoon Gupta
