--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 
   <!-- MAIN -->
   <main>
-    <h1>Learn Smarter with Free Notes and AI Tools</h1>
+    <h1>Welcome</h1>
 
+    
     <h1 data-key="hero_title">Learn Smarter with Free Notes and AI Tools</h1>
 <p data-key="hero_desc">
   Access free notes and use smart AI tools to understand concepts better and faster.
