--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
   <header class="navbar">
   <div class="nav-left">
-    <a href="index.html">Home</a>
-    <a href="notes.html">Notes</a>
+<a href="index.html" data-key="nav_home">Home</a>
+<a href="notes.html" data-key="nav_notes">Notes</a>
+<a href="ai.html" data-key="nav_ai">AI Tools</a>
+<a href="#" data-key="nav_about">About</a>
   </div>
-
-  <div class="nav-logo">PRASIVO</div>
-
-  <div class="nav-right">
-    <a href="ai.html">AI Tools</a>
-    <a href="#">About</a>
-  </div>
+    <select class="lang-select">
+  <option>English</option>
+  <option>Hindi</option>
+  <option>Hinglish</option>
+    </select>
   </header>
 
   <!-- SEARCH -->
@@ -34,6 +34,7 @@
 
     
     <h1 data-key="hero_title">Learn Smarter with Free Notes and AI Tools</h1>
+
 <p data-key="hero_desc">
   Access free notes and use smart AI tools to understand concepts better and faster.
 </p>
