--- a/index.html
+++ b/index.html
@@ -9,19 +9,32 @@
 
 <body>
 
-  <header class="navbar">
-  <div class="nav-left">
-<a href="index.html" data-key="nav_home">Home</a>
-<a href="notes.html" data-key="nav_notes">Notes</a>
-<a href="ai.html" data-key="nav_ai">AI Tools</a>
-<a href="#" data-key="nav_about">About</a>
+  <header class="topbar">
+  <!-- LEFT: HAMBURGER -->
+  <div class="menu-icon" onclick="toggleMenu()">
+    &#9776;
   </div>
+
+  <!-- CENTER: LOGO -->
+  <div class="logo-center">PRASIVO</div>
+
+  <!-- RIGHT: LANGUAGE -->
+  <div class="lang-box">
     <select class="lang-select">
-  <option>English</option>
-  <option>Hindi</option>
-  <option>Hinglish</option>
+      <option>English</option>
+      <option>Hindi</option>
+      <option>Hinglish</option>
     </select>
-  </header>
+  </div>
+</header>
+
+<!-- SIDE MENU -->
+<nav id="sideMenu" class="side-menu">
+  <a href="index.html" data-key="nav_home">Home</a>
+  <a href="notes.html" data-key="nav_notes">Notes</a>
+  <a href="ai.html" data-key="nav_ai">AI Tools</a>
+  <a href="#" data-key="nav_about">About</a>
+</nav>
 
   <!-- SEARCH -->
   <section class="search-section">
