--- a/notes.html
+++ b/notes.html
@@ -9,19 +9,30 @@
 
 <body>
 
-<header class="header">
-  <div class="header-left">
-    <a href="index.html" class="nav-link">Home</a>
+<header class="topbar">
+  <!-- LEFT: HAMBURGER -->
+  <div class="menu-icon" onclick="toggleMenu()">
+    &#9776;
   </div>
 
-  <div class="header-center">
-    <div class="logo">PRASIVO</div>
-  </div>
+  <!-- CENTER: LOGO -->
+  <div class="logo-center">PRASIVO</div>
 
-  <div class="header-right">
-    <a href="notes.html" class="nav-link">Notes</a>
+  <!-- RIGHT: LANGUAGE -->
+  <div class="lang-box">
+    <select class="lang-select">
+      <option>English</option>
+      <option>Hindi</option>
+      <option>Hinglish</option>
+    </select>
   </div>
 </header>
+  <nav id="sideMenu" class="side-menu">
+  <a href="index.html" data-key="nav_home">Home</a>
+  <a href="notes.html" data-key="nav_notes">Notes</a>
+  <a href="ai.html" data-key="nav_ai">AI Tools</a>
+  <a href="#" data-key="nav_about">About</a>
+  </nav>
 
 <section class="search-section">
   <input id="searchBox" type="text" placeholder="Search notes...">
