--- a/ai.html
+++ b/ai.html
@@ -62,6 +62,6 @@ function askAI() {
   document.getElementById("answer").innerText = ans;
 }
 </script>
-
+<script src="script.js"></script>
 </body>
 </html>
