--- a/notes.html
+++ b/notes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Notes | Prasivo</title>
+  <title>B.Pharm Semester I | Prasivo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -10,65 +10,27 @@
 <body>
 
 <header class="topbar">
-  <!-- LEFT: HAMBURGER -->
-  <div class="menu-icon" onclick="toggleMenu()">
-    &#9776;
-  </div>
-
-  <!-- CENTER: LOGO -->
+  <div class="menu-icon">&#9776;</div>
   <div class="logo-center">PRASIVO</div>
-
-  <!-- RIGHT: LANGUAGE -->
-  <div class="lang-box">
-    <select class="lang-select">
-      <option>English</option>
-      <option>Hindi</option>
-      <option>Hinglish</option>
-    </select>
-  </div>
 </header>
-  <nav id="sideMenu" class="side-menu">
-  <a href="index.html" data-key="nav_home">Home</a>
-  <a href="notes.html" data-key="nav_notes">Notes</a>
-  <a href="ai.html" data-key="nav_ai">AI Tools</a>
-  <a href="#" data-key="nav_about">About</a>
-  </nav>
 
-<section class="search-section">
-  <input id="searchBox" type="text" placeholder="Search notes...">
-</section>
+<main class="container">
 
-<main>
-  <h1>Notes</h1>
+  <h1 id="programTitle"></h1>
+  <h2 id="semesterTitle"></h2>
 
-  <ul id="notesList">
-  <li><a href="anatomy.html">Human Anatomy and Physiology</a></li>
-  <li><a href="pharmaceutics.html">Pharmaceutics</a></li>
-  <li><a href="inorganic-chemistry.html">Pharmaceutical Inorganic Chemistry</a></li>
-  <li><a href="pharmaceutical-analysis.html">Pharmaceutical Analysis</a></li>
-  <li><a href="remedial-mathematics.html">Remedial Mathematics</a></li>
-  <li><a href="skill-development.html">Skill Development</a></li>
-  </ul>
+  <section>
+    <h3>📘 PCI Official Syllabus</h3>
+    <ul id="syllabusList"></ul>
+  </section>
+
+  <section>
+    <h3>📚 Subjects</h3>
+    <div id="subjectsContainer"></div>
+  </section>
+
 </main>
 
-<footer>
-  © 2025 Prasivo · Independent Learning Platform
-</footer>
-
-<script>
-  const searchBox = document.getElementById("searchBox");
-  const notes = document.querySelectorAll("#notesList li");
-
-  searchBox.addEventListener("keyup", function () {
-    const value = searchBox.value.toLowerCase();
-    notes.forEach(note => {
-      note.style.display = note.textContent.toLowerCase().includes(value)
-        ? "block"
-        : "none";
-    });
-  });
-</script>
-  
-<script src="script.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
