--- a/anatomy.html
+++ b/anatomy.html
@@ -11,14 +11,14 @@
 
 <!-- COMMON HEADER -->
 <header class="topbar">
-  <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
+  <div class="menu-icon" id="menuBtn">&#9776;</div>
   <div class="logo-center">PRASIVO</div>
 </header>
 
-<!-- SIDE MENU -->
 <nav id="sideMenu" class="side-menu">
   <a href="index.html">Home</a>
   <a href="notes.html">Notes</a>
+  <a href="#">AI Tools</a>
 </nav>
 
 <main class="container">
