--- a/index.html
+++ b/index.html
@@ -1,91 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <title>Prasivo – Smart Learning Platform</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Google Verification -->
-  <meta name="google-site-verification" content="xkzKho1tdEZCm9oMkpwkrTkk_OxMKTz43-PPSRimU" />
+  <!-- Icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <!-- SEO Title -->
-  <title>Prasivo – Exam Focused Free Notes for Indian Students</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f9f9f9;
+      color: #222;
+    }
 
-  <!-- SEO Description -->
-  <meta name="description" content="Prasivo provides exam-oriented notes, last-day revision, and AI tools for Indian students. Simple language. Free." />
+    /* ===== HEADER ===== */
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 12px 16px;
+      background: #ffffff;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
 
-  <!-- Mobile -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    .menu-icon {
+      font-size: 26px;
+      cursor: pointer;
+    }
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="style.css">
+    .logo {
+      font-size: 22px;
+      font-weight: bold;
+      text-align: center;
+      flex: 1;
+    }
+
+    .lang-select {
+      padding: 6px;
+      border-radius: 6px;
+    }
+
+    /* ===== SIDE MENU ===== */
+    .side-menu {
+      position: fixed;
+      top: 0;
+      left: -260px;
+      width: 260px;
+      height: 100%;
+      background: #ffffff;
+      box-shadow: 2px 0 8px rgba(0,0,0,0.2);
+      padding: 20px;
+      transition: left 0.3s ease;
+      z-index: 2000;
+    }
+
+    .side-menu.active {
+      left: 0;
+    }
+
+    .side-menu a {
+      display: block;
+      margin: 15px 0;
+      text-decoration: none;
+      color: #222;
+      font-weight: 500;
+    }
+
+    /* ===== MAIN ===== */
+    main {
+      padding: 30px 20px;
+      text-align: center;
+    }
+
+    .search-box {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 20px auto;
+      max-width: 400px;
+      background: #fff;
+      border-radius: 30px;
+      padding: 8px 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+    .search-box input {
+      border: none;
+      outline: none;
+      flex: 1;
+      padding: 8px;
+      font-size: 16px;
+    }
+
+    .search-box span {
+      cursor: pointer;
+      color: #555;
+    }
+
+    .welcome {
+      margin-top: 30px;
+    }
+
+    .welcome h2 {
+      margin-bottom: 10px;
+    }
+
+    /* ===== ASK BOT ===== */
+    .ask-bot {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 56px;
+      height: 56px;
+      border-radius: 50%;
+      background: #4f46e5;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 26px;
+      cursor: pointer;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    }
+
+    .ask-label {
+      position: fixed;
+      bottom: 0;
+      right: 20px;
+      transform: translateY(-70px);
+      font-size: 12px;
+      color: #333;
+      text-align: center;
+      width: 56px;
+    }
+
+    /* ===== FOOTER ===== */
+    footer {
+      margin-top: 60px;
+      padding: 20px;
+      background: #ffffff;
+      text-align: center;
+      font-size: 14px;
+      box-shadow: 0 -2px 6px rgba(0,0,0,0.08);
+    }
+
+    footer a {
+      margin: 0 8px;
+      text-decoration: none;
+      color: #4f46e5;
+    }
+  </style>
 </head>
-  
+
 <body>
 
-  <header class="topbar">
-  <div class="menu-icon" id="menuBtn">&#9776;</div>
-  <div class="logo-center">PRASIVO</div>
+<!-- SIDE MENU -->
+<nav class="side-menu" id="sideMenu">
+  <a href="notes.html">Notes</a>
+  <a href="#">Syllabus</a>
+  <a href="#">Imp Questions</a>
+  <a href="#">AI Mode</a>
+  <a href="#">About</a>
+</nav>
+
+<!-- HEADER -->
+<header>
+  <span class="material-icons menu-icon" id="menuBtn">menu</span>
+  <div class="logo">PRASIVO</div>
+  <select class="lang-select">
+    <option>English</option>
+    <option>Hindi</option>
+    <option>Hinglish</option>
+  </select>
 </header>
 
-<nav id="sideMenu" class="side-menu">
-  <a href="index.html">Home</a>
-  <a href="notes.html">Notes</a>
-  <a href="#">AI Tools</a>
-</nav>
-  <!-- RIGHT: LANGUAGE -->
-  <div class="lang-box">
-    <select class="lang-select">
-      <option>English</option>
-      <option>Hindi</option>
-      <option>Hinglish</option>
-    </select>
-  </div>
-  </header>
-
-<!-- SIDE MENU -->
-<nav id="sideMenu" class="side-menu">
-  <a href="index.html" data-key="nav_home">Home</a>
-  <a href="notes.html" data-key="nav_notes">Notes</a>
-  <a href="ai.html" data-key="nav_ai">AI Tools</a>
-  <a href="#" data-key="nav_about">About</a>
-</nav>
+<!-- MAIN -->
+<main>
 
   <!-- SEARCH -->
-  <section class="search-section">
-  <input id="homeSearch" type="text" placeholder="Search subjects (Anatomy, Pharmaceutics...)">
-  <ul id="searchResults"></ul>
-</section>
+  <div class="search-box">
+    <input type="text" placeholder="Search topics, subjects..." />
+    <span class="material-icons">search</span>
+  </div>
 
-  <!-- MAIN -->
-  <main>
-    <h1>Welcome</h1>
-
-    
-    <h1 data-key="hero_title">Learn Smarter with Free Notes and AI Tools</h1>
-
-<p data-key="hero_desc">
-  Access free notes and use smart AI tools to understand concepts better and faster.
-</p>
-
-    <p class="founder">
-      <strong>Founder & CEO:</strong> Prasoon Gupta
+  <!-- WELCOME -->
+  <div class="welcome">
+    <h2>Welcome to Prasivo</h2>
+    <p>
+      Prasivo is a smart learning platform for pharmacy students.
+      Study for semester exams, GPAT, CUET-PG and more – all in one place.
     </p>
+  </div>
 
-      <a href="notes.html">
-  <button class="primary-btn">Start Learning</button>
-      </a>
-  </main>
+</main>
 
-  <!-- FOOTER -->
-  <footer>
-    <div class="social">
-      <span>Instagram: Prasoon Gupta</span> ·
-      <span>LinkedIn: Prasoon Gupta</span>
-    </div>
-    <div class="copyright">
-      © 2025 Prasivo · Independent Learning Platform
-    </div>
-  </footer>
-<script src="script.js"></script>
+<!-- ASK BOT -->
+<div class="ask-bot" onclick="alert('AI Mode coming soon')">
+  🤖
+</div>
+<div class="ask-label">Ask</div>
+
+<!-- FOOTER -->
+<footer>
+  <p><strong>Founder & CEO:</strong> Prasoon Gupta</p>
+  <p>
+    <a href="#">LinkedIn – Prasoon Gupta</a> |
+    <a href="#">Instagram – Prasoon Gupta</a>
+  </p>
+  <p>Learning Platform for Future Pharmacists</p>
+</footer>
+
+<!-- JS -->
+<script>
+  const menuBtn = document.getElementById("menuBtn");
+  const sideMenu = document.getElementById("sideMenu");
+
+  menuBtn.addEventListener("click", (e) => {
+    e.stopPropagation();
+    sideMenu.classList.toggle("active");
+  });
+
+  document.addEventListener("click", (e) => {
+    if (!sideMenu.contains(e.target) && !menuBtn.contains(e.target)) {
+      sideMenu.classList.remove("active");
+    }
+  });
+</script>
+
 </body>
 </html>
-  
