--- a/notes.html
+++ b/notes.html
@@ -117,9 +117,8 @@
     <p>
       Refer to the official PCI syllabus before starting preparation.
     </p>
-    <a href="syllabus.pdf" target="_blank" class="btn">
-  View PCI Syllabus (PDF)
-</a>
+    <a href="syllabus.html">View PCI Syllabus</a>
+
   </div>
 
   <!-- SECTION 3 -->
