--- a/syllabus.html
+++ b/syllabus.html
@@ -1,32 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>PCI Syllabus | Prasivo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
-    header {
-      padding: 12px;
-      text-align: center;
-      font-weight: bold;
-      border-bottom: 1px solid #ddd;
-    }
-    iframe {
-      width: 100%;
-      height: calc(100vh - 50px);
-      border: none;
-    }
-  </style>
 </head>
 <body>
 
-<header>PCI Syllabus (PDF)</header>
+<h1>PCI Approved Syllabus</h1>
 
-<iframe src="docs/syllabus.pdf"></iframe>
+<a href="docs/syllabus.pdf" target="_blank">
+  📄 Open Syllabus PDF
+</a>
 
 </body>
 </html>
