--- a/notes.html
+++ b/notes.html
@@ -6,6 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
+    <!-- HEADER -->
+<header class="top-bar">
+  <div class="menu-btn" onclick="toggleMenu()">☰</div>
+
+  <div class="logo">PRASIVO</div>
+
+  <select class="language">
+    <option>English</option>
+    <option>Hindi</option>
+    <option>Hinglish</option>
+  </select>
+</header>
+
+<!-- SIDE MENU -->
+<nav id="sideMenu" class="side-menu">
+  <a href="index.html">Home</a>
+  <a href="notes.html">Notes</a>
+  <a href="syllabus.html">Syllabus</a>
+  <a href="imp-questions.html">Important Questions</a>
+  <a href="#">AI Mode</a>
+  <a href="about.html">About</a>
+</nav>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
