--- a/notes.html
+++ b/notes.html
@@ -177,3 +177,9 @@
 
 </body>
   </html>
+
+<script>
+function toggleMenu() {
+  document.getElementById("sideMenu").classList.toggle("open");
+}
+</script>
