--- a/anatomy.html
+++ b/anatomy.html
@@ -1,164 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Human Anatomy & Physiology | Prasivo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Prasivo – Human Anatomy & Physiology</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    body {
-      margin: 0;
-      font-family: "Segoe UI", Arial, sans-serif;
-      background: #f6f7fb;
-      color: #222;
-    }
+<style>
+body{
+  margin:0;
+  font-family:Segoe UI, Arial;
+  background:#f4f6fb;
+  color:#222;
+}
 
-    /* HEADER */
-    .site-header {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-      padding: 14px;
-      background: #ffffff;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-    }
+/* HEADER */
+header{
+  position:fixed;
+  top:0;
+  width:100%;
+  background:#fff;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  height:60px;
+  box-shadow:0 2px 8px rgba(0,0,0,.1);
+  z-index:1000;
+}
+#menuBtn{
+  position:absolute;
+  left:15px;
+  font-size:26px;
+  background:none;
+  border:none;
+  cursor:pointer;
+}
+header h1{
+  margin:0;
+  letter-spacing:2px;
+}
 
-    #menuBtn {
-      position: absolute;
-      left: 15px;
-      font-size: 22px;
-      background: none;
-      border: none;
-      cursor: pointer;
-    }
+/* MENU */
+#menu{
+  position:fixed;
+  top:0;
+  left:-260px;
+  width:250px;
+  height:100%;
+  background:#fff;
+  box-shadow:2px 0 12px rgba(0,0,0,.15);
+  padding:70px 20px;
+  transition:.3s;
+  z-index:2000;
+}
+#menu a{
+  display:block;
+  padding:12px 0;
+  font-size:18px;
+  text-decoration:none;
+  color:#111;
+}
+#menu a:hover{color:#2563eb}
 
-    .site-header h1 {
-      margin: 0;
-      letter-spacing: 2px;
-    }
+/* CONTENT */
+.container{
+  max-width:900px;
+  margin:auto;
+  padding:90px 15px 40px;
+}
+.card{
+  background:#fff;
+  padding:25px;
+  border-radius:14px;
+  box-shadow:0 15px 30px rgba(0,0,0,.08);
+}
+.hidden{display:none}
 
-    /* MAIN CONTENT */
-    .content {
-      max-width: 900px;
-      margin: auto;
-      padding: 20px;
-    }
+/* UNITS */
+.unit-btn{
+  display:block;
+  padding:12px;
+  margin:10px 0;
+  background:#eef2ff;
+  border-radius:10px;
+  text-decoration:none;
+  font-weight:600;
+  color:#1d4ed8;
+}
+.unit-btn:hover{background:#dbeafe}
 
-    .back-link {
-      display: inline-block;
-      margin-bottom: 15px;
-      color: #2563eb;
-      text-decoration: none;
-      font-weight: 600;
-    }
+/* BACK */
+.back{
+  display:inline-block;
+  margin-bottom:15px;
+  color:#2563eb;
+  cursor:pointer;
+}
 
-    .card {
-      background: #ffffff;
-      padding: 22px;
-      border-radius: 14px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
-    }
-
-    h2 {
-      margin-top: 0;
-      font-size: 26px;
-    }
-
-    .info {
-      background: #eef2ff;
-      padding: 12px;
-      border-radius: 10px;
-      margin: 15px 0;
-    }
-
-    .intro {
-      line-height: 1.7;
-      font-size: 16px;
-    }
-
-    .units {
-      margin-top: 25px;
-    }
-
-    .units h3 {
-      margin-bottom: 10px;
-    }
-
-    .units ul {
-      padding-left: 18px;
-    }
-
-    .units li {
-      margin-bottom: 10px;
-    }
-
-    .units a {
-      text-decoration: none;
-      color: #1d4ed8;
-      font-weight: 600;
-    }
-
-    .units a:hover {
-      text-decoration: underline;
-    }
-  </style>
+/* SECTION TITLE */
+h2,h3{margin-top:0}
+p{line-height:1.7}
+</style>
 </head>
 
 <body>
 
-<header class="site-header">
+<header>
   <button id="menuBtn">☰</button>
   <h1>PRASIVO</h1>
 </header>
 
-<main class="content">
+<nav id="menu">
+  <a onclick="showHome()">Home</a>
+  <a onclick="showHome()">Notes</a>
+  <a href="#">Syllabus</a>
+  <a href="#">Important Questions</a>
+  <a href="#">AI Mode</a>
+  <a href="#">About</a>
+</nav>
 
-  <a href="notes.html" class="back-link">← Back to Notes</a>
+<div class="container">
 
-  <div class="card">
+<!-- HOME / SUBJECT PAGE -->
+<div id="home" class="card">
+  <h2>Human Anatomy & Physiology – I</h2>
+  <p><b>Course:</b> B.Pharmacy Semester I<br>
+     <b>PCI Code:</b> BP101T</p>
 
-    <h2>Human Anatomy & Physiology – I</h2>
+  <p>
+  Ye subject human body ke structure aur normal functioning ko samjhata hai.
+  Anatomy batata hai body dikhti kaisi hai aur physiology batata hai body kaam kaise karti hai.
+  Ye subject pharmacy students ke liye foundation create karta hai jisse future subjects
+  jaise pharmacology aur pathology easily samajh aate hain.
+  </p>
 
-    <div class="info">
-      <p><strong>Course:</strong> B.Pharmacy – Semester I</p>
-      <p><strong>PCI Code:</strong> BP101T</p>
-    </div>
+  <h3>Units – Click to Study</h3>
+  <a class="unit-btn" onclick="openUnit('u1')">Unit I – Introduction to Human Body</a>
+  <a class="unit-btn" onclick="openUnit('u2')">Unit II – Structural Organization & Tissues</a>
+  <a class="unit-btn" onclick="openUnit('u3')">Unit III – Skeletal System</a>
+  <a class="unit-btn" onclick="openUnit('u4')">Unit IV – Blood and Lymph</a>
+  <a class="unit-btn" onclick="openUnit('u5')">Unit V – Cardiovascular System</a>
+</div>
 
-    <p class="intro">
-      Human Anatomy & Physiology ek **foundation subject** hai jo har pharmacy
-      student ke liye bahut important hota hai.  
-      Is subject me hum **human body ke structure (anatomy)** aur
-      **body ka normal kaam karne ka tareeka (physiology)** detail me samajhte hain.
-      <br><br>
-      Simple words me bole to:  
-      👉 **Body dikhti kaisi hai** – ye anatomy batata hai  
-      👉 **Body kaam kaise karti hai** – ye physiology batata hai  
-      <br><br>
-      Is subject ka main goal ye hai ki student ko ye clear ho jaye ki
-      **healthy body ka system kaise work karta hai**, taaki future me
-      jab disease, medicines aur drugs padhein,
-      to unhe easily relate kar sake.
-      <br><br>
-      GPAT, CUET-PG aur semester exams ke liye ye subject **high-weightage**
-      wala hota hai. Agar ye strong ho gaya,
-      to pharmacology aur pathology jaise subjects automatically easy ho jaate hain.
-    </p>
+<!-- UNIT 1 -->
+<div id="u1" class="card hidden">
+<span class="back" onclick="showHome()">← Back</span>
+<h2>Unit I – Introduction to Human Body</h2>
+<p>
+Human body ek well-organized system hai jisme cells, tissues, organs aur systems milkar kaam karte hain.
+Is unit me hum body levels of organization, basic life processes aur homeostasis samajhte hain.
+</p>
+<h3>Theory</h3>
+<p>
+Cells body ki basic unit hoti hain. Cells milkar tissues, tissues milkar organs aur organs milkar systems banate hain.
+Homeostasis ka matlab hota hai body ka internal balance maintain rehna.
+</p>
+<h3>Main Points</h3>
+<ul>
+<li>Levels of organization</li>
+<li>Basic life processes</li>
+<li>Homeostasis concept</li>
+</ul>
+<h3>Exam Questions</h3>
+<ul>
+<li>Define homeostasis</li>
+<li>Explain levels of organization</li>
+</ul>
+</div>
 
-    <div class="units">
-      <h3>📘 Units – Click to Study</h3>
-      <ul>
-        <li><a href="#">Unit I – Introduction to Human Body</a></li>
-        <li><a href="#">Unit II – Structural Organization & Tissues</a></li>
-        <li><a href="#">Unit III – Skeletal System</a></li>
-        <li><a href="#">Unit IV – Blood and Lymph</a></li>
-        <li><a href="#">Unit V – Cardiovascular System</a></li>
-      </ul>
-    </div>
+<!-- UNIT 2 -->
+<div id="u2" class="card hidden">
+<span class="back" onclick="showHome()">← Back</span>
+<h2>Unit II – Structural Organization & Tissues</h2>
+<p>
+Is unit me hum epithelial, connective, muscular aur nervous tissues ke baare me padhte hain.
+Har tissue ka structure aur function alag hota hai.
+</p>
+<h3>Main Points</h3>
+<ul>
+<li>Epithelial tissue – protection</li>
+<li>Connective tissue – support</li>
+<li>Muscle tissue – movement</li>
+<li>Nervous tissue – control</li>
+</ul>
+</div>
 
-  </div>
+<!-- UNIT 3 -->
+<div id="u3" class="card hidden">
+<span class="back" onclick="showHome()">← Back</span>
+<h2>Unit III – Skeletal System</h2>
+<p>
+Skeletal system body ko shape, support aur protection deta hai.
+Bones movement me muscles ke saath kaam karti hain.
+</p>
+</div>
 
-</main>
+<!-- UNIT 4 -->
+<div id="u4" class="card hidden">
+<span class="back" onclick="showHome()">← Back</span>
+<h2>Unit IV – Blood and Lymph</h2>
+<p>
+Blood nutrients aur oxygen transport karta hai.
+Lymph immunity me important role play karta hai.
+</p>
+</div>
+
+<!-- UNIT 5 -->
+<div id="u5" class="card hidden">
+<span class="back" onclick="showHome()">← Back</span>
+<h2>Unit V – Cardiovascular System</h2>
+<p>
+Heart aur blood vessels milkar cardiovascular system banate hain jo body me circulation maintain karta hai.
+</p>
+</div>
+
+</div>
+
+<script>
+const menu=document.getElementById("menu");
+document.getElementById("menuBtn").onclick=()=>{
+  menu.style.left=menu.style.left==="0px"?"-260px":"0px";
+};
+
+function showHome(){
+  document.querySelectorAll(".card").forEach(c=>c.classList.add("hidden"));
+  document.getElementById("home").classList.remove("hidden");
+}
+
+function openUnit(id){
+  document.querySelectorAll(".card").forEach(c=>c.classList.add("hidden"));
+  document.getElementById(id).classList.remove("hidden");
+  menu.style.left="-260px";
+}
+</script>
 
 </body>
-                                                             </html>
+</html>
