--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div id="home-page" class="page active">
         <div class="card">
             <h1>Welcome to <span style="color:var(--accent)">PRASIVO</span></h1>
-            <p>Pharmacy education ko dekhne ka nazariya badalne wala platform. Humne ise student ki un pareshaniyon ko dekh kar banaya hai jo 10 alag jagah dhoondte hain aur end me confuse ho jate hain.</p>
+            <p>Pharmacy education ko dekhne ka nazariya badalne wala platform. Humne ise student ki un pareshaniyon ko dekh kar banaya hai jo 10 alag jagah material dhoondte hain aur end me confuse ho jate hain.</p>
         </div>
 
         <div class="card">
