--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
         <h1>Contact Us</h1>
         <div class="card">
             <p>Agar aapko koi bhi issue hai ya aap contributor banna chahte hain, toh Prasoon Gupta se direct connect karein.</p>
-            <a href="https://linkedin.com/in/prasoon-gupta" class="contact-item">
+            <a href="https://in.linkedin.com/in/prasoongupta04" class="contact-item">
                 <i class="fab fa-linkedin contact-icon"></i>
                 <div><strong>LinkedIn</strong><br>Prasoon Gupta</div>
             </a>
-            <a href="https://instagram.com/prasoon_gupta" class="contact-item">
+            <a href="https://www.instagram.com/_prasoon.g?igsh=dXU1YThncmJkY3g3" class="contact-item">
                 <i class="fab fa-instagram contact-icon"></i>
                 <div><strong>Instagram</strong><br>Prasoon Gupta</div>
             </a>
