Fix missing newline at end of index.html

--- a/index.html
+++ b/index.html
@@ -90,3 +90,10 @@
 
     <div id="contact-page" class="page">
         <div class="back-btn" onclick="showPage('home-page')"><i class="fas fa-arrow-left
+
+    <script src="data.js"></script>
+    
+    <script src="app.js"></script>
+
+</body>
+</html>
