--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
     <div id="contact-page" class="page">
         <div class="back-btn" onclick="showPage('home-page')"><i class="fas fa-arrow-left
 
+    <script src="js/data.js"></script>
+<script src="js/state.js"></script>
+<script src="js/memory.js"></script> <script src="js/system/brain.js"></script> <script src="js/system/layers.js"></script>
+
+<script src="js/mode/router.js"></script>
+<script src="js/perception.js"></script> <script src="js/elevation/ui.js"></script>
+<script src="js/elevation/quantum-ui.js"></script>
+
     <script src="data.js"></script>
     
     <script src="app.js"></script>
