Fix heading case for consistency in index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div id="home-page" class="page active">
         <div class="card">
-            <h1>Welcome to <span style="color:var(--accent)">PRASIVO</span></h1>
+            <h1>Welcome to Prasivo <span style="color:var(--accent)">PRASIVO</span></h1>
             <p>Pharmacy education ko dekhne ka nazariya badalne wala platform. Humne ise student ki un pareshaniyon ko dekh kar banaya hai jo 10 alag jagah dhoondte hain aur end me confuse ho jate hain.</p>
         </div>
 
@@ -91,9 +91,6 @@
     <div id="contact-page" class="page">
         <div class="back-btn" onclick="showPage('home-page')"><i class="fas fa-arrow-left
 
-    <script src="js/data.js"></script>
-<script src="js/state.js"></script>
-<script src="js/memory.js"></script> <script src="js/system/brain.js"></script> <script src="js/system/layers.js"></script>
 
 <script src="js/data.js"></script>
     <script src="js/state.js"></script>
