Add examTime.js script to index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="back-btn" onclick="showPage('home-page')"><i class="fas fa-arrow-left
 
 
-<script src="js/data.js"></script>
+    <script src="js/data.js"></script>
     <script src="js/state.js"></script>
     <script src="js/memory.js"></script>
 
@@ -100,12 +100,14 @@
     <script src="js/system/layers.js"></script>
 
     <script src="js/mode/router.js"></script>
+    <script src="js/mode/examTime.js"></script>
     <script src="js/perception.js"></script>
 
     <script src="js/elevation/ui.js"></script>
     <script src="js/elevation/quantum-ui.js"></script>
 
     <script src="app.js"></script>
+            
 
 </body>
 </html>
